# snake-game

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: inputHandler.h  main.cpp
src/Model/: field.cpp  field.h  food.cpp  obstacle.cpp  obstacle.h  point.cpp  point.h  snake.cpp  snake.h
src/controller/: input.h
src/model/: coordinate.cpp  coordinate.h  field.cpp  field.h  food.h  snake.cpp  snake.h
src/view/console/: viewBuilder.h
